--- a/gifFun.html
+++ b/gifFun.html
@@ -2,12 +2,27 @@
 <html>
     <head>
         <title>Gif Fun!!</title>
-
+        <link rel="stylesheet" type="text/css" href="assets/gifFun.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
+            crossorigin="anonymous">
     </head>
     <body>
-        <h1>Tarantino Movies and characters</h1>
+    <div class="row">
+        <h1 id="title">Tarantino Movies and characters</h1>
             <div id="button-display"></div>
-        <div id="gifs-appear"></div>
+    </div>
+    <div class="row">        
+        <div class="col-md-9">
+            <div id="gifs-appear"></div>
+        </div>
+        <div class="col-md-3">
+            <form>
+                Add Custom Button <br>
+                <input type="text" id="customBtn" >
+                <button id="submit" class="btn btn-default">Submit</button>
+            </form>
+        </div>
+    </div>
     </body>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script type="text/javascript" src="assets/gifFun.js"></script></html>
