--- a/gifFun.html
+++ b/gifFun.html
@@ -7,7 +7,7 @@
             crossorigin="anonymous">
     </head>
     <body>
-    <div class="row">
+    <div class="row header">
         <h1 id="title">Tarantino Movies and characters</h1>
             <div id="button-display"></div>
     </div>
@@ -16,13 +16,16 @@
             <div id="gifs-appear"></div>
         </div>
         <div class="col-md-3">
-            <form>
-                Add Custom Button <br>
-                <input type="text" id="customBtn" >
-                <button id="submit" class="btn btn-default">Submit</button>
-            </form>
+            <div class="button-form">
+                <form>
+                   <h6 class="button-title"> Add Custom Button </h6>
+                    <input type="text" id="customBtn" ><br><br>
+                    <button id="submit" class="input-btn ">Submit</button>
+                </form>
+            </div>
         </div>
     </div>
     </body>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script type="text/javascript" src="assets/gifFun.js"></script></html>
+</html>
